--- a/public/index.html
+++ b/public/index.html
@@ -516,9 +516,10 @@
           let goalscorers = document.createElement("div");
           goalscorers.style.position = "absolute";
           goalscorers.style.left = "50%"; // 25% vom linken Rand
-          goalscorers.style.top = "50%"; // 50% vom oberen Rand
+          goalscorers.style.top = "35%"; // 50% vom oberen Rand
           goalscorers.style.transform = "translate(-50%, -50%)"; // zentral und mittig
-          goalscorers.style.width = "60%"; // 70% der Breite des Parent-Divs
+          goalscorers.style.width = "60%"; // 60% der Breite des Parent-Divs
+          goalscorers.style.height = "50%";
 
           let homegoalscorersdiv = document.createElement("div");
           homegoalscorersdiv.style.display = "inline-block";
