--- a/public/index.html
+++ b/public/index.html
@@ -257,10 +257,15 @@
       }
 
       function getBestScorers() {
+        let url = "https://www.fupa.net/league/a-klasse-pocking/scorers";
         // Beste Torschützen
         if (document.getElementById("bestscorersDiv").children.length == 0) {
           fetch("/api/scorers", {
-            method: "GET", // HTTP-Methode
+            method: "POST", // HTTP-Methode
+            headers: {
+              "Content-Type": "application/json", // Header für JSON-Daten
+            },
+            body: JSON.stringify({ url: url }),
           })
             .then((response) => {
               if (!response.ok) {
@@ -282,10 +287,15 @@
       }
 
       function getBestTsvScorers() {
+        let url = "https://www.fupa.net/team/tsv-bad-griesbach-m1-2025-26";
         // Beste TSV Torschützen
         if (tsvScorers.length == 0) {
           fetch("/api/scorers/tsv", {
             method: "GET", // HTTP-Methode
+            headers: {
+              "Content-Type": "application/json", // Header für JSON-Daten
+            },
+            body: JSON.stringify({ url: url }),
           })
             .then((response) => {
               if (!response.ok) {
