--- a/public/index.html
+++ b/public/index.html
@@ -207,6 +207,7 @@
       let matches = [];
       let retries = 0;
       let sponsors = [];
+      let logos = [];
       let tsvScorers = [];
       let isRunning = false;
 
@@ -252,7 +253,10 @@
             ? "Wir begrüßen zum heutigen Heimspiel herzlich den"
             : "Wir begrüßten beim letzten Heimspiel den";
           opponentText.innerText = match.awayTeam;
-          opponentLogo.src = match.awayTeamImg.replace("200x200", "300x300");
+          let awayTeamLogo = getLogoForTeam(match.awayTeam);
+          opponentLogo.src = awayTeamLogo
+            ? awayTeamLogo
+            : match.awayTeamImg.replace("200x200", "300x300");
         }
       }
 
@@ -438,6 +442,17 @@
         });
       }
 
+      function getLogoForTeam(team) {
+        logos.forEach((logo) => {
+          console.log("logo: ", logo);
+          let logoWithoutEnding = logo.img.split(".")[0];
+          if (logoWithoutEnding == team) {
+            return logo;
+          }
+        });
+        return null;
+      }
+
       function createMatchPages() {
         let tsvscorersDiv = document.getElementById("tsvscorers");
 
@@ -475,7 +490,10 @@
           homeTeamDiv.style.width = "15%";
 
           let homeTeamLogo = document.createElement("img");
-          homeTeamLogo.src = match.homeTeamImg;
+          let homeTeamLogoLocal = getLogoForTeam(match.homeTeam);
+          homeTeamLogo.src = homeTeamLogoLocal
+            ? homeTeamLogoLocal
+            : match.homeTeamImg;
           homeTeamLogo.alt = match.homeTeam;
           homeTeamLogo.style.width = "100%";
           homeTeamLogo.style.height = "auto";
@@ -488,7 +506,10 @@
           awayTeamDiv.style.width = homeTeamDiv.style.width;
 
           let awayTeamLogo = document.createElement("img");
-          awayTeamLogo.src = match.awayTeamImg;
+          let awayTeamLogoLocal = getLogoForTeam(match.awayTeam);
+          awayTeamLogo.src = awayTeamLogoLocal
+            ? awayTeamLogoLocal
+            : match.awayTeamImg;
           awayTeamLogo.alt = match.awayTeam;
           awayTeamLogo.style.width = homeTeamLogo.style.width;
           awayTeamLogo.style.height = homeTeamLogo.style.height;
@@ -546,8 +567,6 @@
           awaygoalscorersdiv.style.height = "65%";
 
           match.goals.forEach((goal) => {
-            console.log("goal", goal);
-
             let goalentry = document.createElement("p");
 
             let playerText = document.createElement("span");
@@ -589,6 +608,18 @@
           tsvscorersDiv.parentElement.insertBefore(newDiv, tsvscorersDiv);
         });
         slides = document.querySelectorAll(".slide");
+      }
+
+      function getLogos() {
+        fetch("/api/sponsors", {
+          method: "GET", // HTTP-Methode
+        }).then((response) => {
+          if (!response.ok) {
+            throw new Error("Fehler beim Senden der Daten");
+          }
+          logos = response;
+          console.log("Erfolg:", logos);
+        });
       }
 
       function createSponsorPages() {
@@ -645,6 +676,7 @@
 
       // acting
       createSponsorPages();
+      getLogos();
       setTimeout(getBestTsvScorers, 3000);
       setTimeout(updateData, 10000);
     </script>
