--- a/public/index.html
+++ b/public/index.html
@@ -611,7 +611,7 @@
       }
 
       function getLogos() {
-        fetch("/api/sponsors", {
+        fetch("/api/logos", {
           method: "GET", // HTTP-Methode
         }).then((response) => {
           if (!response.ok) {
