--- a/public/index.html
+++ b/public/index.html
@@ -453,7 +453,7 @@
             return logo;
           }
         });
-        console.log("null für logo: ", logo, " für Team ", team);
+        console.log("null für team: ", team);
         return null;
       }
 
