TSV Torschützen leichte Anpassung

--- a/public/index.html
+++ b/public/index.html
@@ -70,7 +70,7 @@
           "
         >
           <img
-            src="logo/tsv.png"
+            src="logo/tsv-bad-griesbach.png"
             alt="TSV Logo"
             style="width: 100%; height: auto"
           />
@@ -449,7 +449,7 @@
 
           newDiv.appendChild(pGoals);
           newDiv.appendChild(img);
-          document.body.appendChild(container);
+          newDiv.appendChild(container);
           //newDiv.appendChild(pName);
 
           tsvscorersDiv.appendChild(newDiv);
