Greetings gleiche Größe

--- a/public/index.html
+++ b/public/index.html
@@ -70,9 +70,14 @@
           "
         >
           <img
-            src="logo/tsv-bad-griesbach.png"
+            src="logo/tsv.png"
             alt="TSV Logo"
-            style="width: 100%; max-width: 80%; max-height: 80%; height: auto"
+            style="
+              width: 100%; /* Anpassen der Breite des Bildes */
+              height: auto; /* Automatisch anpassen der Höhe des Bildes */
+              max-height: 80%; /* Maximaler Höhe des Bildes */
+              max-width: 80%; /* Maximaler Breite des Bildes */
+            "
           />
         </div>
         <div
@@ -87,7 +92,12 @@
           <img
             id="opponentLogo"
             alt="Gegner Logo"
-            style="width: 100%; max-width: 80%; max-height: 80%; height: auto"
+            style="
+              width: 100%; /* Anpassen der Breite des Bildes */
+              height: auto; /* Automatisch anpassen der Höhe des Bildes */
+              max-height: 80%; /* Maximaler Höhe des Bildes */
+              max-width: 80%; /* Maximaler Breite des Bildes */
+            "
           />
         </div>
       </div>
