Logos ins Zentrum

--- a/public/index.html
+++ b/public/index.html
@@ -67,17 +67,13 @@
             left: 5%;
             transform: translateY(-50%);
             width: 25%;
+            align-items: center;
           "
         >
           <img
-            src="logo/tsv.png"
+            src="logo/tsv-bad-griesbach.png"
             alt="TSV Logo"
-            style="
-              width: 100%; /* Anpassen der Breite des Bildes */
-              height: auto; /* Automatisch anpassen der Höhe des Bildes */
-              max-height: 80%; /* Maximaler Höhe des Bildes */
-              max-width: 80%; /* Maximaler Breite des Bildes */
-            "
+            style="width: 100%; height: auto"
           />
         </div>
         <div
@@ -87,17 +83,13 @@
             right: 5%;
             transform: translateY(-50%);
             width: 25%;
+            align-items: center;
           "
         >
           <img
             id="opponentLogo"
             alt="Gegner Logo"
-            style="
-              width: 100%; /* Anpassen der Breite des Bildes */
-              height: auto; /* Automatisch anpassen der Höhe des Bildes */
-              max-height: 80%; /* Maximaler Höhe des Bildes */
-              max-width: 80%; /* Maximaler Breite des Bildes */
-            "
+            style="width: 100%; height: auto"
           />
         </div>
       </div>
