--- a/public/index.html
+++ b/public/index.html
@@ -248,6 +248,8 @@
           )
           .pop();
 
+        console.log("todaysMatch", todaysMatch);
+
         const match = todaysMatch || lastHomeMatch;
 
         if (match) {
