Torschützen und Tabelle mittig

--- a/public/index.html
+++ b/public/index.html
@@ -116,7 +116,9 @@
       >
         <table
           style="
-            width: 98%;
+            margin-left: 20px;
+            margin-right: 20px;
+            width: 95%;
             height: 100%;
             border-collapse: separate;
             border-spacing: 20px;
@@ -591,7 +593,7 @@
             goalentry.appendChild(minuteText);
 
             goalentry.style.color = "white";
-            goalentry.style.fontSize = "35px";
+            goalentry.style.fontSize = "30px";
             goalentry.style.display = "block";
             goalentry.style.textAlign = "left;";
 
