Test mit gestreckten Hintergrundbildern

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
           height: 100vh;
           width: 100vw;
           background-image: url('background/landing.png');
-          background-size: contain;
+          background-size: cover;
           background-position: center;
         "
         class="slide"
@@ -662,7 +662,7 @@
               newDiv.style.width = "100vw";
               newDiv.style.textAlign = "center";
               newDiv.style.backgroundImage = "url('background/sponsor.png')";
-              newDiv.style.backgroundSize = "contain";
+              newDiv.style.backgroundSize = "cover";
               newDiv.style.backgroundPosition = "center";
               newDiv.className = "slide";
 
