--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
           height: 100vh;
           width: 100vw;
           background-image: url('background/landing.png');
-          background-size: cover;
+          background-size: contain;
           background-position: center;
         "
         class="slide"
