--- a/public/index.html
+++ b/public/index.html
@@ -609,6 +609,9 @@
             }
             //goalscorers.appendChild(goalentry);
           });
+
+          console.log("match", match);
+          console.log("verdict", match.verdict);
           if (match.verdict != "") {
             score.textContent = homegoals + ":" + awaygoals;
           } else {
