--- a/public/next.html
+++ b/public/next.html
@@ -384,6 +384,15 @@
       function getAllMatchUrls() {
         let hrefs = document.querySelectorAll('a[href*="/match/"]');
         let hrefArray = [];
+
+        let nextMatch = Array.from(hrefs).find((href) => {
+          let trimmedHref = href.getAttribute("href").split("?")[0];
+          let date = trimmedHref.split("-").pop();
+          return date > todayAsformattedDate;
+        });
+
+        console.log("nextMatch Array: ", nextMatch);
+
         hrefs.forEach(function (href) {
           let trimmedHref = href.getAttribute("href").split("?")[0];
           let date = trimmedHref.split("-").pop();
