--- a/public/next.html
+++ b/public/next.html
@@ -388,8 +388,8 @@
         hrefs.forEach(function (href) {
           let trimmedHref = href.getAttribute("href").split("?")[0];
           let date = trimmedHref.split("-").pop();
-          //if (date > todayAsformattedDate)
-          console.log("nextMatch: ", trimmedHref);
+          if (date > todayAsformattedDate)
+            console.log("nextMatch: ", trimmedHref);
         });
 
         hrefs.forEach(function (href) {
