--- a/public/next.html
+++ b/public/next.html
@@ -384,19 +384,32 @@
       function getAllMatchUrls() {
         let hrefs = document.querySelectorAll('a[href*="/match/"]');
         let hrefArray = [];
-
+        let nextMatch = null;
         hrefs.forEach(function (href) {
           let trimmedHref = href.getAttribute("href").split("?")[0];
           let date = trimmedHref.split("-").pop();
-          if (date > todayAsformattedDate)
-            console.log("nextMatch: ", trimmedHref);
+          if (date > todayAsformattedDate) {
+            if (nextMatch == null) {
+              nextMatch = trimmedHref;
+            } else {
+              let nextHref = nextMatch.split("?")[0];
+              let nextDate = nextHref.split("-").pop();
+              if (date < nextDate) {
+                nextMatch = trimmedHref;
+              }
+            }
+          }
         });
+
+        console.log("nextMatch: ", nextMatch);
 
         hrefs.forEach(function (href) {
           let trimmedHref = href.getAttribute("href").split("?")[0];
           let date = trimmedHref.split("-").pop();
           if (date <= todayAsformattedDate) hrefArray.push(trimmedHref);
         });
+
+        if (nextMatch != null) hrefArray.push(nextMatch);
 
         matchUrls = [...new Set(hrefArray)];
 
